--- a/guides/getting-started/quickstart-cmake.mdx
+++ b/guides/getting-started/quickstart-cmake.mdx
@@ -1,317 +1,211 @@
 ---
 title: "Quickstart with CMake"
-description: "A step-by-step tutorial demonstrating how to set up GoogleTest and GoogleMock in a C++ project using CMake. Covers installation, project configuration, writing basic tests, and running them successfully."
+description: "A complete walkthrough for integrating GoogleTest and GoogleMock into a CMake-based project, covering installation, configuration, and first test execution for modern C++ workflows."
 ---
 
 # Quickstart with CMake
 
-A practical step-by-step tutorial demonstrating how to set up GoogleTest and GoogleMock in a C++ project using CMake. This guide walks you through installation, project configuration, writing basic tests using GoogleTest and GoogleMock, and running them successfully.
+This guide will help you quickly integrate GoogleTest and GoogleMock into a modern C++ project built with CMake. You will learn how to configure your project, install necessary dependencies, write your first test, and run it using CMake's testing framework.
 
 ---
 
-## Workflow Overview
+## What You'll Achieve
 
-### Task Description
-Learn how to integrate GoogleTest and GoogleMock into a C++ project that uses CMake for building. This guide covers downloading/building the libraries, configuring your project to link against them, writing simple unit tests and mocks, and running tests from the command line.
+- Add GoogleTest and GoogleMock to your CMake project with minimal setup
+- Write and run your first test executable using GoogleTest
+- Understand how GoogleMock is included and linked with your tests
 
-### Prerequisites
-- You have CMake installed (version 3.14 or later recommended).
-- Basic familiarity with C++ and the command line.
-- A C++17 compatible compiler.
-- A C++ project with a CMake build system.
 
-### Expected Outcome
-After completing this tutorial, you will have:
-- GoogleTest and GoogleMock compiled and ready for use.
-- Your project configured with CMake to compile and link tests using GoogleTest and GoogleMock.
-- Written a basic test and mock class using GoogleTest and GoogleMock macros.
-- Run tests successfully and verified the integration works end-to-end.
+## Prerequisites
 
-### Time Estimate
-Approximately 20-40 minutes, depending on your environment setup and familiarity.
+Before you start, ensure you have the following:
 
-### Difficulty Level
-Beginner to Intermediate
+- A supported operating system: Linux, macOS, or Windows
+- A C++ compiler supporting at least C++17 (e.g., GCC, Clang, MSVC)
+- [CMake](https://cmake.org/) version 3.14 or above
+- A compatible build tool such as Make or Ninja
+
+> **Note:** The examples use Unix-like shell commands but are fully compatible with Windows command line or PowerShell.
 
 ---
 
-## Step-by-Step Instructions
+## Step 1: Create Your Project Directory
 
-### Step 1: Obtain GoogleTest/GoogleMock Source
-
-1. Clone the GoogleTest repository (includes GoogleMock):
-
-   ```bash
-   git clone https://github.com/google/googletest.git -b main
-   cd googletest
-   ```
-
-2. (Optional) To use a specific release version, replace `main` with a tag like `v1.17.0`.
-
-### Step 2: Build GoogleTest and GoogleMock with CMake
-
-1. Create a build directory:
-
-   ```bash
-   mkdir build
-   cd build
-   ```
-
-2. Run CMake to generate build files for GoogleTest/GoogleMock:
-
-   ```bash
-   cmake ..
-   ```
-
-   > This generates platform-specific build scripts (Makefiles, Visual Studio projects, etc.) and includes GoogleMock by default.
-
-3. Build the libraries:
-
-   - On Unix/macOS:
-     ```bash
-     make
-     ```
-
-   - On Windows with Visual Studio:
-     Open the generated solution, then build it.
-
-### Step 3: (Optional) Install GoogleTest/GoogleMock
-
-If you want the libraries and headers globally installed on your system for easy reuse:
+Open your terminal and execute:
 
 ```bash
-sudo make install
+mkdir my_project && cd my_project
 ```
 
-The default install location is `/usr/local/` on Unix.
+This creates your project folder and switches into it.
 
-### Step 4: Integrate GoogleTest and GoogleMock into Your Own CMake Project
+---
 
-In your project's `CMakeLists.txt`, add the following lines:
+## Step 2: Write Your `CMakeLists.txt` to Fetch GoogleTest and GoogleMock
+
+In your project directory, create a file named `CMakeLists.txt` with the following content:
 
 ```cmake
-# Find installed GoogleTest package (if installed system-wide or via package manager)
-find_package(GTest REQUIRED)
+cmake_minimum_required(VERSION 3.14)
+project(my_project)
 
-# Or add GoogleTest source directly (if you want to build it alongside your project)
-# add_subdirectory(path/to/googletest)
+# Ensure at least C++17 is used
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-enable_testing()
-
-add_executable(my_tests
-    test/my_test_file.cpp
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 
-# Link GoogleTest and GoogleMock to your test executable
-target_link_libraries(my_tests PRIVATE GTest::gtest GTest::gmock_main)
+# For Windows: match the compiler/runtime used in the parent project
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
 
-# Enable testing
-add_test(NAME MyTests COMMAND my_tests)
+# Enable testing functionality
+enable_testing()
+
+# Declare your test executable
+add_executable(hello_test hello_test.cc)
+
+# Link GoogleTest and GoogleMock main libraries
+# gmock_main includes gtest, so only this is required for tests using mocks.
+target_link_libraries(hello_test GTest::gtest_main GTest::gmock_main)
+
+# Discover tests automatically
+include(GoogleTest)
+gtest_discover_tests(hello_test)
 ```
 
-> **Note:** If you included GoogleTest as a subdirectory rather than installed it, link against `gtest` and `gmock_main` accordingly.
+### Explanation
 
-### Step 5: Write a Basic Test Using GoogleTest
+- **FetchContent** downloads GoogleTest and GoogleMock sources during CMake configuration.
+- `gtest_force_shared_crt` ensures runtime matches on Windows to avoid linker errors.
+- `enable_testing()` activates CMake's testing support.
+- `hello_test` is your test executable, which you will create next.
+- Links to `gtest_main` and `gmock_main` provided by GoogleTest CMake targets.
+- Automatic test discovery enables CTest to run your tests.
 
-Create `test/my_test_file.cpp` with the following:
+---
+
+## Step 3: Add a Sample Test Source File
+
+Create a file named `hello_test.cc` in your project root with:
 
 ```cpp
 #include <gtest/gtest.h>
-
-// Simple test case
-TEST(SampleTest, AdditionWorks) {
-  EXPECT_EQ(2 + 2, 4);
-}
-```
-
-### Step 6: Write a Mock Class and Test Using GoogleMock
-
-Suppose you have the following interface:
-
-```cpp
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
-```
-
-Define a mock class inheriting from it:
-
-```cpp
 #include <gmock/gmock.h>
 
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
+// A simple test using GoogleTest
+TEST(HelloTest, BasicAssertions) {
+    // Verify two strings are not equal
+    EXPECT_STRNE("hello", "world");
+    // Verify an arithmetic computation
+    EXPECT_EQ(7 * 6, 42);
+}
+
+// Example of using GoogleMock: define a mock class
+class MockExample {
+public:
+    MOCK_METHOD(int, Compute, (int x), (const));
 };
-```
 
-Write a test using the mock:
-
-```cpp
-TEST(TurtleTest, MovingForwardCallsPen) {
-  MockTurtle turtle;
-
-  // Expect Forward to be called once with an argument of 100
-  EXPECT_CALL(turtle, Forward(100)).Times(1);
-
-  // Call the method
-  turtle.Forward(100);
+TEST(MockTest, SimpleMock) {
+    MockExample mock;
+    EXPECT_CALL(mock, Compute(5)).WillOnce(testing::Return(10));
+    EXPECT_EQ(mock.Compute(5), 10);
 }
 ```
 
-### Step 7: Build and Run Your Tests
-
-From your project root or build directory:
-
-```bash
-cmake --build .
-ctest
-```
-
-Or run the test binary directly:
-
-```bash
-./my_tests
-```
-
-You should see output indicating tests passed.
+This source demonstrates both basic GoogleTest assertions and a simple GoogleMock expectation.
 
 ---
 
-## Practical Tips & Best Practices
+## Step 4: Build Your Tests
 
-- **Order matters for EXPECT_CALL:** Set all your `EXPECT_CALL`s *before* invoking methods on mocks.
-- **Use namespaces:** Import gMock symbols with `using ::testing::_;` for clean test code.
-- **Suppress uninteresting call warnings:** Use `NiceMock<T>` if you want to ignore unexpected calls warnings.
-- **Keep destructors virtual:** For interfaces to be mocked, make sure destructors are virtual.
-- **Manage dependencies smartly:** Use aliases or parentheses to handle types with commas in `MOCK_METHOD`.
+Run the following commands from your project root:
+
+```bash
+cmake -S . -B build
+cmake --build build
+```
+
+- The first command generates build files in the `build` directory.
+- The second command builds your tests.
+
+Expected output will show compilation steps and completion without errors.
+
+---
+
+## Step 5: Run Your Tests
+
+Execute the tests with CTest by running:
+
+```bash
+cd build
+ctest
+```
+
+You should see output similar to:
+
+```
+Test project /path/to/my_project/build
+    Start 1: HelloTest.BasicAssertions
+1/1 Test #1: HelloTest.BasicAssertions ........   Passed    0.00 sec
+
+100% tests passed, 0 tests failed out of 1
+
+Total Test time (real) =   0.01 sec
+```
+
+This confirms your tests compiled and ran successfully.
+
+---
+
+## Tips and Best Practices
+
+- **Update the Git commit hash** in `FetchContent_Declare` frequently to benefit from the latest fixes and features.
+- **Use `gmock_main` target** when linking with GoogleMock to get the built-in test main function.
+- **Set the C++ standard explicitly** to ensure modern language features and compatibility.
+- On Windows, the `gtest_force_shared_crt` option avoids runtime conflicts—do not omit it.
 
 ---
 
 ## Troubleshooting
 
-- **Build errors due to missing gtest/gmock:** Verify that CMake `find_package` locates GoogleTest and mocks.
-- **Linker errors:** Make sure you link your test executable against `gtest`, `gmock`, and `pthread` if needed.
-- **Unmatched expectations:** Ensure all `EXPECT_CALL`s are written before exercising mocks.
-- **Warnings about uninteresting calls:** Switch to using `NiceMock` or add catch-all `EXPECT_CALL` with `Times(AnyNumber())`.
-
-For additional issues, consult the [Troubleshooting Common Issues](../../getting-started/troubleshooting-help/common-issues.md) guide.
-
----
-
-## Next Steps & Related Content
-
-- Explore the [GoogleTest Primer](../configuration-first-use/write-and-run-first-test.md) to deepen your understanding.
-- Learn more about mocking in the [Mocking Primer](../getting-started/mocking-primer.md).
-- Advanced mock usage is covered in [Setting Expectations and Default Actions](../../guides/mocking-best-practices/setting-expectations.md).
-- Review integration with build systems in [Build System Integration](../../guides/integration-scenarios/build-system-integration.md).
-
----
-
-## Summary Diagram
-
-```mermaid
-flowchart TD
-  A[Start: Prepare C++ Project] --> B[Clone googletest Repo]
-  B --> C[Create build directory and run cmake]
-  C --> D[Build GoogleTest and GoogleMock libraries]
-  D --> E[Install libraries (Optional)]
-  E --> F[Configure your CMakeLists.txt for testing]
-  F --> G[Write basic tests with GoogleTest]
-  G --> H[Define mocks with GoogleMock macros]
-  H --> I[Build your test executable]
-  I --> J[Run tests and verify output]
-  J --> K[Success!]
-
-  classDef success fill:#cfc,stroke:#333,stroke-width:2px;
-  class K success;
-```
+<AccordionGroup title="Common Issues and Solutions">
+<Accordion title="Tests Not Found or Not Running">
+- Ensure you called `enable_testing()` in your CMakeLists.txt.
+- Verify `gtest_discover_tests()` is invoked after test binary target creation.
+- Confirm that your test source files include `<gtest/gtest.h>` and define tests with `TEST()` or `TEST_F()`.
+</Accordion>
+<Accordion title="Linker Errors on Windows Related to CRT Runtimes">
+- Make sure `set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)` is set before fetching GoogleTest.
+- Align your project's runtime library setting with GoogleTest’s (dynamic vs static).
+</Accordion>
+<Accordion title="Compilation Fails Due to C++ Standard">
+- Confirm compiler supports C++17.
+- Explicitly set `set(CMAKE_CXX_STANDARD 17)` and `set(CMAKE_CXX_STANDARD_REQUIRED ON)`.
+</Accordion>
+</AccordionGroup>
 
 ---
 
-## References
+## What Next?
 
-- [GoogleTest on GitHub](https://github.com/google/googletest)
-- [GoogleMock Guide](docs/gmock_for_dummies.md)
-- [GoogleTest System Requirements](../../getting-started/prerequisites-installation/system-requirements.md)
-- [Mocking Reference](../../docs/reference/mocking.md)
-- [CMake Build and Integration](../../docs/googletest/README.md#build-with-cmake)
+- Explore the [GoogleTest Primer](primer.md) to learn how to write unit tests using the framework.
+- Visit [Mocking Basics with GoogleMock](gmock_for_dummies.md) for deeper insight into mock object usage.
+- Check out [Googletest Samples](samples.md) for additional example tests.
+- Read the [Integrating with CI/CD Pipelines](integration-scenarios.md) guide for continuous integration practices.
 
 ---
 
-## Example Full CMakeLists.txt
+Congratulations! You have successfully set up GoogleTest and GoogleMock in a CMake project and run your first test.
 
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(MyProject LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+---
 
-# Download and build GoogleTest if not installed
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/tags/release-1.13.0.tar.gz
-)
-FetchContent_MakeAvailable(googletest)
-
-enable_testing()
-
-add_executable(my_tests
-  test/my_test_file.cpp
-)
-
-target_link_libraries(my_tests PRIVATE GTest::gtest GTest::gmock_main)
-
-add_test(NAME MyTests COMMAND my_tests)
-```
-
-## Example Test File
-
-```cpp
-#include <gtest/gtest.h>
-#include <gmock/gmock.h>
-
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
-
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
-
-using ::testing::AtLeast;
-using ::testing::_;
-
-TEST(TurtleTest, MoveForwardCallsForward) {
-  MockTurtle turtle;
-  EXPECT_CALL(turtle, Forward(100)).Times(1);
-
-  turtle.Forward(100);
-}
-
-TEST(TurtleTest, GetXReturnsValue) {
-  MockTurtle turtle;
-  EXPECT_CALL(turtle, GetX()).WillOnce(testing::Return(42));
-
-  EXPECT_EQ(turtle.GetX(), 42);
-}
-```
+<Info>
+This guide assumes a base familiarity with C++ and command-line interfaces. For detailed understanding of assertion macros, test fixtures, and advanced mocking features, refer to linked guides in the GoogleTest documentation.
+</Info>
