--- a/guides/getting-started/quickstart-bazel.mdx
+++ b/guides/getting-started/quickstart-bazel.mdx
@@ -1,122 +1,116 @@
 ---
 title: "Quickstart with Bazel"
-description: "Discover how to integrate GoogleTest and GoogleMock using Bazel. This guide covers WORKSPACE and BUILD files, project structure, and running your first tests using the Bazel build tool."
+description: "How to add GoogleTest and GoogleMock to a Bazel project, write your first test, and execute tests efficiently, emphasizing best practices and troubleshooting tips for the Bazel ecosystem."
 ---
 
 # Quickstart with Bazel
 
-This tutorial guides you through integrating GoogleTest and GoogleMock into your C++ project using the Bazel build system. It covers setting up a Bazel workspace, configuring dependencies, and creating, building, and running your first test binary.
+This guide helps you add GoogleTest and GoogleMock to your Bazel-based C++ project, write and execute your first test, and adopt best practices for efficient testing in the Bazel ecosystem.
 
 ---
 
-## Prerequisites
+## Workflow Overview
 
-Before you begin, ensure your environment meets these requirements:
+### What This Guide Will Help You Do
+- Set up a Bazel workspace configured to consume GoogleTest and GoogleMock
+- Write your first test using GoogleTest
+- Build and run tests using Bazel commands
+- Understand essential configurations and key Bazel BUILD file syntax
+- Troubleshoot common integration problems
 
-- A supported operating system (Linux, macOS, Windows).
-- A C++ compiler supporting at least C++17 standard.
-- Bazel build system version 7.0 or later installed.
+### Prerequisites
+- Operating system compatible with Bazel and GoogleTest (Linux, macOS, Windows)
+- Bazel version 7.0 or later installed ([Bazel installation guide](https://bazel.build/install))
+- C++ compiler supporting C++17 language features
+- Basic familiarity with Bazel workspaces and BUILD files
 
-For platform compatibility and detailed prerequisites, see the [Supported Platforms](../../getting-started/setup-foundations/system-requirements) and [Prerequisite Tools & Dependencies](../../getting-started/setup-foundations/prerequisites) pages.
+### Expected Outcome
+After following this guide, you will have a working Bazel project with GoogleTest and GoogleMock integrated. You’ll also have a simple functional test executable that you can build and run using Bazel, verifying your environment and test configuration are correct.
 
-If Bazel is not yet installed, refer to the [Bazel installation guide](https://bazel.build/install).
+### Time Estimate
+Approximately 15–30 minutes depending on your familiarity with Bazel and C++ tooling.
 
-<Note>
-The commands shown use a Unix-like shell prompt, but all steps work on Windows command line as well.
-</Note>
+### Difficulty Level
+Beginner to Intermediate
 
 ---
 
-## Step 1: Set Up a Bazel Workspace
+## Step-by-Step Instructions
 
-A Bazel workspace is the root directory where Bazel manages your source files and dependencies.
+### Step 1: Create and initialize your Bazel workspace
 
-1. Create your workspace directory and navigate into it:
+1. Open a terminal and create a new directory for your Bazel workspace:
 
 ```bash
-$ mkdir my_workspace && cd my_workspace
+mkdir my_workspace && cd my_workspace
 ```
 
-2. In the root of your workspace, create a file named `MODULE.bazel` to declare GoogleTest as an external dependency. Use the following content:
+2. Create a `MODULE.bazel` file at the root of this workspace. This file declares your dependencies and enables Bazel's module system.
+
+3. Add the following content to `MODULE.bazel` to specify the GoogleTest dependency version:
 
 ```python
 # MODULE.bazel
 
-# Specify the GoogleTest module dependency at the desired version
+# Use the latest GoogleTest version from Bazel Central Registry
 bazel_dep(name = "googletest", version = "1.17.0")
 ```
 
-Replace `1.17.0` with the latest available version from the [Bazel Central Registry](https://registry.bazel.build/modules/googletest).
+> **Note:** Replace `1.17.0` with the latest stable GoogleTest version available at https://registry.bazel.build/modules/googletest.
 
-<Tip>
-Using `MODULE.bazel` leverages Bazel Central Registry for easy and reproducible dependency management.
-</Tip>
+### Step 2: Write your first test source code
 
----
-
-## Step 2: Create the Test Source File
-
-Create a C++ source file named `hello_test.cc` within your workspace. This will hold your simple test.
+1. In your workspace, create a C++ source file named `hello_test.cc`:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// Example test exercising basic assertions.
+// This test checks basic string inequality and integer equality
 TEST(HelloTest, BasicAssertions) {
-  // Confirm two strings are different.
+  // Expect that two strings are not equal
   EXPECT_STRNE("hello", "world");
-  // Confirm arithmetic equality.
+  // Expect that multiplication produces the expected result
   EXPECT_EQ(7 * 6, 42);
 }
 ```
 
-This example test demonstrates how to use GoogleTest assertions in your code.
+This simple test uses GoogleTest assertions to verify expected behavior.
 
----
+### Step 3: Create your Bazel `BUILD` file
 
-## Step 3: Create the Bazel BUILD File
+1. In the same directory as `hello_test.cc`, create a file named `BUILD`.
 
-In the same directory as your test source file, create a `BUILD` file to configure Bazel for building and running your test.
-
-Add the following content:
+2. Add the following content to define your test target:
 
 ```python
 cc_test(
     name = "hello_test",
-    size = "small",  # Denotes the test size category
-    srcs = ["hello_test.cc"],  # Source files
+    size = "small",
+    srcs = ["hello_test.cc"],
     deps = [
-        "@googletest//:gtest",        # Link GoogleTest library
-        "@googletest//:gtest_main",   # Link GoogleTest main() function
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
 ```
 
-This `cc_test` rule defines the test binary with its dependencies. The `gtest_main` dependency provides a default `main()` function, so you don't have to write one yourself.
+- `cc_test` declares a test executable.
+- `deps` includes GoogleTest libraries `gtest` and `gtest_main` (which contains a ready-made `main` function).
 
----
+### Step 4: Build and run your tests
 
-## Step 4: Build and Run Your Test
-
-Use Bazel commands to build and run your test binary:
+Use the following Bazel command to compile and run your tests:
 
 ```bash
-$ bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
+bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
 ```
 
-Here:
+- `--cxxopt=-std=c++17` ensures your test is compiled with C++17 support.
+- `--test_output=all` shows all output, including test logs.
 
-- `--cxxopt=-std=c++17` ensures compilation with C++17 standard.
-- `--test_output=all` makes Bazel show all test output.
-- `//:hello_test` specifies the target.
-
-You should see output like this:
+Upon successful execution, you should see output like:
 
 ```
-INFO: Analyzed target //:hello_test (26 packages loaded, 362 targets configured).
-INFO: Found 1 test target...
-INFO: From Testing //:hello_test:
-==================== Test output for //:hello_test:
 Running main() from gmock_main.cc
 [==========] Running 1 test from 1 test suite.
 [----------] Global test environment set-up.
@@ -124,54 +118,114 @@ Running main() from gmock_main.cc
 [ RUN      ] HelloTest.BasicAssertions
 [       OK ] HelloTest.BasicAssertions (0 ms)
 [----------] 1 test from HelloTest (0 ms total)
-
 [----------] Global test environment tear-down
 [==========] 1 test from 1 test suite ran. (0 ms total)
 [  PASSED  ] 1 test.
-================================================================================
-Target //:hello_test up-to-date:
-  bazel-bin/hello_test
-INFO: Elapsed time: 4.190s, Critical Path: 3.05s
-INFO: 27 processes: 8 internal, 19 linux-sandbox.
-INFO: Build completed successfully, 27 total actions
-//:hello_test                                                     PASSED in 0.1s
 
-INFO: Build completed successfully, 27 total actions
+//:hello_test                                                     PASSED in 0.1s
 ```
 
-This confirms the test passed successfully.
+Congratulation: Your Bazel project is now correctly integrated with GoogleTest!
 
 ---
 
-## Practical Tips and Best Practices
+## Best Practices and Tips
 
-- Always specify the C++ standard you intend to use during build to avoid compatibility issues (`--cxxopt=-std=c++17` for GCC/Clang, `/std:c++17` for MSVC).
-- Declare dependencies explicitly in your Bazel workspace and BUILD files for clarity and reproducibility.
-- Use `@googletest//:gtest_main` to link a ready-made `main()` function unless you need custom test initialization.
-- Organize your workspace to keep test sources and BUILD files close to each other.
-- When your project grows, consider organizing sources into separate directories with accompanying BUILD files.
-
----
-
-## Troubleshooting Common Issues
-
-<AccordionGroup title="Common Troubleshooting">  <Accordion title="Bazel Build Fails Due to Missing Dependencies">  Ensure that your `MODULE.bazel` file exists at the workspace root and that you have an active internet connection to download dependencies from the Bazel Central Registry. Verify that the version specified for Googletest is valid.  </Accordion>  <Accordion title="Compiler Does Not Use C++17">  Add the `--cxxopt=-std=c++17` flag on the Bazel command line to enforce C++17 standards support. For MSVC, use `--cxxopt=/std:c++17`.  </Accordion>  <Accordion title="Tests Do Not Run or Are Not Found">  Confirm your `cc_test` rule is correctly named and includes the test source file. Also, ensure it depends on `@googletest//:gtest_main` for a main function unless you provide your own.  </Accordion>  <Accordion title="Linker Errors Related to gtest or gmock">  Ensure your `deps` in the BUILD file correctly reference GoogleTest targets: `@googletest//:gtest` and `@googletest//:gtest_main`. Also, check the Bazel version compatibility with your Googletest version.  </Accordion></AccordionGroup>
-
-<Warning>
-Bazel caches dependencies aggressively. If you encounter unexpected behavior after dependency changes, run `bazel clean` to reset cache.
-</Warning>
+- **Pin GoogleTest Version:** Always specify a concrete version in `MODULE.bazel` to maintain reproducible builds.
+- **Use `gtest_main`:** Link against `gtest_main` to avoid writing your own `main` function.
+- **Leverage Bazel's Caching:** Efficient rebuilds occur when you follow Bazel workspaces and keep BUILD files accurate.
+- **Use Bazel Test Filters and Flags:** Control which tests run, repeats, and output verbosity by passing flags as documented in [Running Tests](https://github.com/google/googletest/blob/main/docs/primer.md#running-tests).
 
 ---
 
-## Next Steps & Additional Resources
+## Common Pitfalls & Troubleshooting
 
-- Explore the [GoogleTest Primer](primer.md) to learn how to write simple and fixture-based tests after setup.
-- Review [GoogleTest Samples](samples.md) for practical examples incorporating mocks and various assertions.
-- When ready, dive into [Using Mock Objects Effectively](../../guides/writing-and-running-tests/using-mock-objects) for advanced mocking strategies.
-- Consult [Troubleshooting Common Test Issues](../../getting-started/validation-troubleshooting/common-issues) if you face build or runtime test issues.
+<AccordionGroup title="Frequent Issues Running GoogleTest with Bazel">
+<Accordion title="Test Failures or No Tests Run">
+- Check that your test source file matches the `srcs` attribute in the BUILD file.
+- Confirm dependencies `@googletest//:gtest` and `@googletest//:gtest_main` are correctly declared.
+- Ensure you run `bazel test` command, not just `bazel build`, to execute tests.
+</Accordion>
 
-For more about Bazel build configurations and advanced integrations, visit the official [Bazel documentation](https://docs.bazel.build/).
+<Accordion title="Compiler Errors Related to C++17">
+- Make sure to pass `--cxxopt=-std=c++17` when running Bazel test or add `cxxopts` in `BUILD` if needed.
+- Confirm your compiler supports C++17.
+</Accordion>
+
+<Accordion title="Bazel Version Issues or Dependency Not Found">
+- Verify Bazel version is 7.0 or later.
+- Run `bazel clean --expunge` to clear corrupted cache.
+- Check your `MODULE.bazel` file syntax and dependencies.
+</Accordion>
+</AccordionGroup>
+
+<Tip>
+If you encounter unexpected test failures or build errors, running Bazel with verbose output (`-s`) can help debug linker and compilation issues.
+</Tip>
 
 ---
 
-Happy testing with GoogleTest and Bazel!
+## Next Steps
+
+- Explore the [GoogleTest Primer](primer.md) to learn how to write richer test cases using various assertion macros and test fixtures.
+- Dive deeper into [Mocking Basics with GoogleMock](real-world-workflows/mocking-basics) to test code that depends on interfaces or external systems.
+- Review the [Running Tests](getting-started/first-test-and-validation/running-tests) guide for advanced test execution techniques.
+- For CI/CD integration and scaling Bazel test workflows, see [Integrating with Your Build & CI](overview/architecture-features-integration/integration-scenarios).
+
+---
+
+## Summary Diagram
+
+```mermaid
+flowchart TD
+
+  subgraph Workspace Setup
+    WS1["Create Bazel workspace directory"]
+    WS2["Write MODULE.bazel with googletest dependency"]
+  end
+
+  subgraph Test Development
+    TD1["Write test source file (hello_test.cc)"]
+    TD2["Create BUILD file with cc_test target"]
+  end
+
+  subgraph Build & Execution
+    BE1["Run bazel test with C++17 flag"]
+    BE2["Observe test output and results"]
+  end
+
+  WS1 --> WS2 --> TD1 --> TD2 --> BE1 --> BE2
+
+  classDef important fill:#f96,stroke:#333,stroke-width:2px;
+  BE2:::important
+```
+
+---
+
+You have successfully completed the Quickstart tutorial for Bazel with GoogleTest and GoogleMock. This solid foundation enables you to grow your test suite efficiently using Bazel's powerful build features.
+
+---
+
+# Additional Resources
+
+- [Bazel Official Documentation](https://bazel.build)
+- [GoogleTest Primer](primer.md)
+- [GoogleTest Running Tests Guide](getting-started/first-test-and-validation/running-tests)
+- [GoogleMock Mocking Basics](real-world-workflows/mocking-basics)
+- [Supported Platforms and Prerequisites](getting-started/setup-and-installation/prerequisites-and-supported-platforms)
+
+---
+
+# Frequently Asked Questions
+
+<Accordion title="Why use `cc_test` instead of `cc_binary` for tests?">
+
+`cc_test` is Bazel's native test rule optimized for running test binaries. It integrates with Bazel's test runner, supports test-specific flags, outputs, and parallelism.
+
+</Accordion>
+
+<Accordion title="How do I specify additional compiler options globally?">
+
+Use Bazel configuration options or pass `--cxxopt` flags to Bazel commands, e.g., `--cxxopt=-std=c++17` for enabling C++17.
+
+</Accordion>
